eks-platform/helm/devops-sample-app/rendered/dev-rendered.yaml
---
# Source: devops-sample-app/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "devops-sample-app-dev-devops-sample-app"
  labels:
    app.kubernetes.io/name: devops-sample-app
    app.kubernetes.io/instance: devops-sample-app-dev
    app.kubernetes.io/managed-by: Helm
    environment: "dev"

spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: devops-sample-app
    app.kubernetes.io/instance: devops-sample-app-dev
---
# Source: devops-sample-app/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "devops-sample-app-dev-devops-sample-app"
  labels:
    app.kubernetes.io/name: devops-sample-app
    app.kubernetes.io/instance: devops-sample-app-dev
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/managed-by: Helm
    environment: "dev"

spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app.kubernetes.io/name: devops-sample-app
      app.kubernetes.io/instance: devops-sample-app-dev
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: devops-sample-app
        app.kubernetes.io/instance: devops-sample-app-dev
        app.kubernetes.io/version: "1.0.0"
        environment: "dev"
        project: "devops-production-lab"
        managedBy: "helm"
    spec:
      containers:
        - name: "devops-sample-app"
          image: "devops-sample-app:prod"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "250m"
          readinessProbe:
            httpGet:
              path: /ready
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 3
---
# Source: devops-sample-app/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-sample-app-dev-devops-sample-app
  labels:
    app.kubernetes.io/name: devops-sample-app
    app.kubernetes.io/instance: devops-sample-app-dev
    app.kubernetes.io/managed-by: Helm
    environment: "dev"
spec:
  ingressClassName: nginx
  rules:
    - host: dev.devops-lab.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devops-sample-app-dev-devops-sample-app
                port:
                  number: 80
